Dodano DMA na jeden kanał

--- a/program/SW4STM32/BURZA/Debug/makefile
+++ b/program/SW4STM32/BURZA/Debug/makefile
@@ -32,7 +32,7 @@ endif
 all: BURZA.elf
 
 # Tool invocations
-BURZA.elf: $(OBJS) $(USER_OBJS)
+BURZA.elf: $(OBJS) $(USER_OBJS) ../STM32F411CEUx_FLASH.ld
 	@echo 'Building target: $@'
 	@echo 'Invoking: MCU GCC Linker'
 	arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=hard -mfpu=fpv4-sp-d16 -specs=nosys.specs -specs=nano.specs -T"../STM32F411CEUx_FLASH.ld" -Wl,-Map=output.map -Wl,--gc-sections -lm -o "BURZA.elf" @"objects.list" $(USER_OBJS) $(LIBS)
